JN-12 fix llvm emition, add more native function